Página de login

--- a/login.html
+++ b/login.html
@@ -9,9 +9,28 @@
     <title>PixIt</title>
 </head>
 <body>
-    <h1>PixIt</h1>
-    <div></div>
-    <p>Logins recentes</p>
-    <div></div>
+    <header><img src="images/Pixit.png"></header>
+
+    <div class="containner">
+        <h1 class="alinhamento">Bem-Vindo</h1>
+    <p class="alinhamento">Sua nova rede social tem nome: Pix It!
+        Participe e venha se conectar com os amigos e se divertir conosco. </p>
+        <div></div>
+        <label for="email" class="centralizar">Login</label>
+        <div></div>
+        <input type="text" name="Insira seu login" class="caixas">
+        <div></div>
+        <label for="senha" class="centralizar">Senha</label>
+        <div></div>
+        <input type="password" name="Insira a sua senha" class="caixas">
+        <div></div>
+        <button class="centralizar" onclick="botaoClicar">Entrar</button>
+        <div></div>
+        <p class="alinhamento">Ainda não é cadastrado?</p>
+        <button onclick="botaoClicar">Cadastre-se</button>
+
+    </div>
+
+
 </body>
 </html>
