Alteração do campo Cidade para lista na página de Cadastro

--- a/cadastro.html
+++ b/cadastro.html
@@ -30,7 +30,12 @@
         <br>
 
         <label><b>Cidade</b></label><br>
-        <input type="text" placeholder="Insira a cidade, estado e país onde mora">
+        <select>
+          <option>Escolha um estado da lista</option>
+          <option value="sp">São Paulo</option>
+          <option value="rj">Rio de Janeiro</option>
+        </select>
+
         <br>
         <br>
         <br>
