--- a/cadastro.html
+++ b/cadastro.html
@@ -29,11 +29,35 @@
         <input type="date" min="1950-01-01" max="2012-01-01">
         <br>
 
-        <label><b>Cidade</b></label><br>
+        <label><b>Estado</b></label><br>
         <select>
           <option>Escolha um estado da lista</option>
-          <option value="sp">São Paulo</option>
+          <option value="ac">Acre</option>
+          <option value="al">Alagoas</option>
+          <option value="ap">Amapá</option>
+          <option value="am">Amazonas</option>
+          <option value="ba">Bahia</option>
+          <option value="ce">Ceará</option>
+          <option value="df">Distrito Federal</option>
+          <option value="es">Espírito Santo</option>
+          <option value="go">Goiás</option>
+          <option value="ma">Maranhão</option>
+          <option value="mt">Mato Grosso</option>
+          <option value="ms">Mato Grosso do Sul</option>
+          <option value="mg">Minas Gerais</option>
+          <option value="pa">Pará</option>
+          <option value="pa">Paraíba</option>
+          <option value="pe">Pernambuco</option>
+          <option value="pi">Piauí</option>
           <option value="rj">Rio de Janeiro</option>
+          <option value="rn">Rio Grande do Norte</option>
+          <option value="rs">Rio Grande do Sul</option>
+          <option value="ro">Rondônia</option>
+          <option value="rr">Roraima</option>
+          <option value="sc">Santa Catarina</option>
+          <option value="sp">São Paulo</option>
+          <option value="se">Sergipe</option>
+          <option value="to">Tocantins</option>
         </select>
 
         <br>
