Organização dos arquivos nas suas devidas pastas

--- a/login.html
+++ b/login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login.css">
-    <script src="login.js"></script>
+    <link rel="stylesheet" href="style/login.css">
+    <script src="js/login.js"></script>
     <title>PixIt</title>
 </head>
 <body>
@@ -27,7 +27,7 @@
         <button class="centralizar" onclick="botaoClicar">Entrar</button>
         <div></div>
         <p class="alinhamento">Ainda não é cadastrado?</p>
-        <button onclick="botaoClicar">Cadastre-se</button>
+        <button onclick="nomeBotao">Cadastre-se</button>
 
     </div>
 
