update-feed-botao-sair

--- a/feed_2.html
+++ b/feed_2.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <input class="search" type="text">
-        <button>sair</button>        
+        <a href="login.html">sair</a><p>  
     </header>
 
     <div class="container">
