Link cadastre-se

--- a/login.html
+++ b/login.html
@@ -23,11 +23,11 @@
         <div></div>
         <p class="paragrafo">Esqueceu sua senha?</p>
         <div></div>
-        <button class="button" onclick="botaoClicar">Login</button>
+        <button class="button">Login</button>
         <div></div>
         <p class="paragrafo">Ainda não é cadastrado?</p>
         <div></div>
-        <p class="paragrafo">Cadastre-se</p>
+        <a class="paragrafo" href="cadastro.html">Cadastre-se</a>
         </div>
 
     </div>
